--- a/src/modules/VirtualKeyboard/VirtualKeyboard.css
+++ b/src/modules/VirtualKeyboard/VirtualKeyboard.css
@@ -1,13 +1,3 @@
-.keyField {
-  width: 800px;
-  height: 200px;
-  display: block;
-  margin: 50px auto;
-  padding: 20px;
-  resize: none;
-  font-size: 1.5em;
-}
-
 @keyframes scale {
   from {
     transform: scale(0)
@@ -23,6 +13,7 @@
   flex-direction: column;
   align-items: center;
   animation: scale .5s;
+  user-select: none;
 }
 
 .keyboard__row {
@@ -32,9 +23,7 @@
 .keyboard__key {
   width: 46px;
   height: 46px;
-  margin-top: 8px;
-  margin-left: 4px;
-  margin-right: 4px;
+  margin: 4px;
   text-align: center;
   line-height: 45px;
   font-size: 14px;
